--- a/ads.html
+++ b/ads.html
@@ -18,7 +18,6 @@
     
     <!-- My CSS -->
     <link rel="stylesheet" href="./presto.css">
-    <link rel="stylesheet" href="./ads.css">
     <title>Presto.it | All Ads</title>
     <link rel="shortcut icon" href="./media/pLogoNewNew.png" type="image/x-icon">
 </head>
@@ -183,7 +182,7 @@
                 <div id="sortFiltersDiv" class="col-6 col-lg-3 d-flex align-items-center">
                     <ul id="ulSortFilters" class="d-flex">
                         <li class="px-1">Filter:</li>
-                        <li class="px-1">All</li>
+                        <li class="px-1 selectedFilter">All</li>
                         <li class="px-1">Searching</li>
                         <li class="px-1">Selling</li>
                     </ul>
@@ -192,7 +191,7 @@
                     <p class="my-auto">Sort:</p>
                     <i class="mt-1 fa-solid fa-arrow-down-short-wide mx-2"></i>
                     <select id="sortSelect" class="form-select" aria-label="Default select example">
-                        <option class="sortOptions" selected>New to old (default)</option>
+                        <option class="sortOptions" selected>New to old</option>
                         <option class="sortOptions" value="3">Old to new</option>
                         <option class="sortOptions" value="1">A-Z</option>
                         <option class="sortOptions" value="2">Z-A</option>
@@ -202,33 +201,14 @@
         </div>
     </section>
 
-    <!-- Search filters (2)-->
-    <!-- <section id="searchFiltersContainerFluid" class="container-fluid">
+    <section class="container-fluid">
         <div class="container">
-            <div id="searchFilterRow" class="row m-4">
-                <div id="searchFilterCol" class="col-12 card back-sec py-4">
-                    <div class="row justify-content-center">
-                        <div class="col-6 col-md-3 mx-0 px-1">
-                            <label for="searchByNameInput" class="ps-1 ubuntuFont customBlack">Search by name</label>
-                            <input id="searchByNameInput" type="text" class="w-100" placeholder=" Digit here">
-                        </div>
-                        <div class="col-6 col-md-3 mx-0 px-1">
-                            <label for="searchByCategoryInput" class="ps-1 ubuntuFont customBlack">Search by category</label>
-                            <input id="searchByCategoryInput" type="text" class="w-100">
-                        </div>
-                        <div class="col-6 col-md-3 mx-0 px-1">
-                            <label for="searchByPriceInput" class="ps-1 ubuntuFont customBlack">Search by price</label>
-                            <div id="searchByPriceInput" class="d-flex justify-content-center">
-                                <input type="number" class="mx-0 px-1 w-100">
-                                <input type="number" class="mx-0 px-1 w-100">
-                            </div>
-                        </div>
-                        <button id="searchFilterBtn" class="col-6 col-md-2 mx-1 px-1">Search</button>
-                    </div>
+            <div class="row">
+                <div id="adsWrapper" class="col-12 d-flex">
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <!-- Newsletter -->
@@ -385,7 +365,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      
     <!-- My Js -->
-    <script src="./presto.js"></script>
+    <script src="./ads.js"></script>
 
 </body>
 </html>
